Implemented basic listView and basic navigation

--- a/Android_Project/Milestone_2/Globetrotter/app/src/main/AndroidManifest.xml
+++ b/Android_Project/Milestone_2/Globetrotter/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         </activity>
         <activity android:name=".NewPlaceActivity" />
         <activity android:name=".NewPlaceExtraActivity" />
-        <activity android:name=".NewPlaceImageActivity"></activity>
+        <activity android:name=".NewPlaceImageActivity" />
+        <activity android:name=".PlacesListView"></activity>
     </application>
 
 </manifest>
