--- a/Android_Project/Milestone_3/Globetrotter/app/build.gradle
+++ b/Android_Project/Milestone_3/Globetrotter/app/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:19.1.0'
     testCompile 'junit:junit:4.12'
 }
 
